Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         </ul>
       </header>
       <section>
-        <p>Rhumsaa\Uuid is a PHP 5.3+ library for generating and working with <a href="http://tools.ietf.org/html/rfc4122">RFC 4122</a> version
+        <h2>
+<a name="about-rhumsaauuid" class="anchor" href="#about-rhumsaauuid"><span class="octicon octicon-link"></span></a>About Rhumsaa\Uuid</h2>
+
+<p>Rhumsaa\Uuid is a PHP 5.3+ library for generating and working with <a href="http://tools.ietf.org/html/rfc4122">RFC 4122</a> version
 1, 3, 4, and 5 universally unique identifiers (UUID).</p>
 
 <p>From <a href="http://en.wikipedia.org/wiki/Universally_unique_identifier">Wikipedia</a>:</p>
