Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h2>
-<a name="about-rhumsaauuid" class="anchor" href="#about-rhumsaauuid"><span class="octicon octicon-link"></span></a>About Rhumsaa\Uuid</h2>
+<a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h2>
 
 <p>Rhumsaa\Uuid is a PHP 5.3+ library for generating and working with <a href="http://tools.ietf.org/html/rfc4122">RFC 4122</a> version
 1, 3, 4, and 5 universally unique identifiers (UUID).</p>
@@ -43,7 +43,10 @@
 <p>Much inspiration for this library came from the <a href="http://docs.oracle.com/javase/6/docs/api/java/util/UUID.html">Java</a> and
 <a href="http://docs.python.org/3/library/uuid.html">Python</a> UUID libraries.</p>
 
-<p>Please see <code>docs/</code> for generated API documentation.</p>
+<h2>
+<a name="api-documentation" class="anchor" href="#api-documentation"><span class="octicon octicon-link"></span></a>API Documentation</h2>
+
+<p>The <a href="http://ramsey.github.io/uuid/apidocs">latest class API documentation</a> is available online. This project uses <a href="http://phpdoc.org/">phpDocumentor</a> to generate this documentation. To generate the documentation on your own, run <code>phpdoc</code> from the root of the project. This will generate documentation in the <code>docs/</code> folder.</p>
 
 <h2>
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
